--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		<h1>Text-Adventure</h1>
 
 		<section id="profile">
-
+			<p id="name"></p>
+			<p id="age"></p>
+			<p id="money"></p>
 		</section>
 
 		<section id="console"></section>
