--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<p id="name"></p>
 			<p id="age"></p>
 			<p id="money"></p>
+			<p id="motd"></p>
 		</section>
 
 		<section id="console"></section>
